plugins {
    id 'org.springframework.boot' version '3.4.0' // Latest stable version
    id 'io.spring.dependency-management' version '1.1.3'
    id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)  // Set Java version to 17
    }
}

repositories {
    mavenCentral()
}
dependencies {
    // Spring Boot Core Dependencies
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // Database
    implementation 'com.h2database:h2'  // In-memory database for testing

    // OpenAPI Documentation
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    implementation 'io.swagger.core.v3:swagger-annotations:2.2.8'
    implementation 'io.swagger.core.v3:swagger-models:2.2.8'

    // Hibernate and Jakarta Persistence API
    implementation 'org.hibernate:hibernate-core:6.2.12.Final'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}
